--- a/app/radio/views/layouts/signaling.phtml
+++ b/app/radio/views/layouts/signaling.phtml
@@ -5,11 +5,24 @@
     <div class="sideWrap">
         
         <div class="side-module">
-            <div class="head"><h2>信令查询</h2></div>
+            <div class="head"><h2>通过呼号查询信令</h2></div>
             <div class="body">
-                <form method="get" name="qrz" id="qrz">
-                callsign <input type="text" id="qrz" name="qrz" value="" size="6" maxlength="6" /><br />
-                信令：
+                <form method="get" name="qrz" id="qrz" action="/radio/signaling/search">
+                    callsign <input type="text" id="callsign" name="callsign" value="" size="6" maxlength="6" required=""/><br />
+                <input type="submit" value="search" id="go" name="go"/>
+                </form>                
+                你可以在这里查询已备案的信令ID
+                <div class="divider solid"></div>
+                <div class="foot-links"><a href="/radio/profile/signaling">我要备案信令ID</a></div>
+            </div>
+            <div class="foot"></div>
+        </div>       
+
+        <div class="side-module">
+            <div class="head"><h2>通过信令查询呼号</h2></div>
+            <div class="body">
+                <form method="get" name="qrz" id="qrz" action="/radio/signaling/search">
+                    信令代码：<input type="text" id="code" name="code" value="" size="8" maxlength="8" required=""/><br />
                 <select name="signaling">
                     <option value="mototrbo">Mototrbo</option>
                     <option value="mdc1200">MDC1200</option>
@@ -25,8 +38,8 @@
                 <div class="foot-links"><a href="/radio/profile/signaling">我要备案信令ID</a></div>
             </div>
             <div class="foot"></div>
-        </div>       
-     
+        </div>               
+        
     </div>
 </div>
 
