--- a/app/radio/views/profile/qth.phtml
+++ b/app/radio/views/profile/qth.phtml
@@ -1,6 +1,6 @@
 <?php use Phalcon\Tag; ?>
         <div class="main-module">
-            <div class="head"><h2>业余无线电设台QSL卡片邮寄地址</h2></div>
+            <div class="head"><h2>业余无线电设台地址</h2></div>
             <div class="body"> 
 
 <style type="text/css">
@@ -47,7 +47,7 @@ map.addEventListener("click", function(e){
 
         
         <div class="side-module">
-            <div class="head"><h2>下列地址仅用于邮寄QSL卡片</h2></div>
+            <div class="head"><h2>QTH 地址</h2></div>
             <div class="body">
            <?php 
             if($qth)
