--- a/app/radio/views/signaling/qcii.phtml
+++ b/app/radio/views/signaling/qcii.phtml
@@ -1,5 +1,5 @@
 	<div class="main-module">
-		<div class="head"><h2>信令</h2></div>
+		<div class="head"><h2>Quik-Call II 信令</h2></div>
 		<div class="body">
 
 		</div>
