--- a/app/radio/views/index/qrz.phtml
+++ b/app/radio/views/index/qrz.phtml
@@ -5,10 +5,57 @@
             <div class=head><H2>QRZ</H2></div>
             <div class=body>
                 <?php echo $qrz->callsign ?>
-                <?php echo $qrz->qth ?>
+                <?php //echo $qrz->qth ?>
             </div>
         </div>
 
+        <div class=main-module id=tagging>
+            <div class=head><h2>QSL 卡片邮寄地址</h2></div>
+            <div class=body>
+
+                <?php if($mail){
+                    print(sprintf("地址：%s<br> 邮编：%s <br>收件人：%s<br>",$mail->address, $mail->zipcode, $mail->addressee));
+                }?>
+
+            </div>
+        </div>
+        <div class="main-module">
+            <div class="head"><h2>电台设台地址(QTH)</h2></div>
+            <div class="body">
+                <?php if($qth){ 
+                    print(sprintf("地址：%s<br> 坐标：%s <br>CQ：%s, ITU: %s<br> 描述：%s <br>",$qth->address, $qth->coordinate, $qth->zone['cq'], $qth->zone['itu'], $qth->description));
+                 }?>
+                
+
+<style type="text/css">
+#map{height:500px;width:700px;float:left;border-right:2px solid #bcbcbc;}
+</style>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=IoN3tUhZjq78v2DyeztYLQEO"></script>
+
+<div id="map"></div>
+
+<script type="text/javascript">
+
+// 百度地图API功能
+var map = new BMap.Map("map");
+var point   = null;
+var marker  = null;
+
+map.enableScrollWheelZoom();                            //启用滚轮放大缩小
+<?php if($qth){?>
+point = new BMap.Point(<?php echo $qth->coordinate ?>);
+map.centerAndZoom(point,12);
+marker = new BMap.Marker(point);
+map.addOverlay(marker);
+<?php }else{ ?>
+map.centerAndZoom("中国",5);                   // 初始化地图,设置城市和地图级别。    
+<?php } ?>
+</script>                   
+                
+            </div>
+            <div class="foot"></div>
+        </div>
+        
     </div>
     <div class="sideWrap">
         <div class="side-module">
