--- a/app/radio/views/signaling/c4fm.phtml
+++ b/app/radio/views/signaling/c4fm.phtml
@@ -1,5 +1,5 @@
 	<div class="main-module">
-		<div class="head"><h2>Ham Software</h2></div>
+		<div class="head"><h2>C4FM 信令</h2></div>
 		<div class="body">
 
 		</div>
