--- a/app/views/member/profile.phtml
+++ b/app/views/member/profile.phtml
@@ -1,40 +1,20 @@
-<?php use Phalcon\Tag; ?>
+
 <div class="wrapper">
     <div class="mainWrap">
         <div class="main-module">
-            <div class=head><H2>Zone map</H2></div>
+            <div class=head><H2></H2></div>
             <div class=body>
 <?php if(empty($status)){ ?>
 
-<?php echo Tag::form("member/signup"); ?>
 
-<p>
-    <label for="username">用户名</label>
-    <?php echo Tag::textField("username") ?>
-</p>
-
-<p>
-    <label for="password">密码</label>
-    <?php echo Tag::passwordField("password") ?>
-</p>
-
-<p>
-    <label for="password">确认密码</label>
-    <?php echo Tag::passwordField("password2") ?>
-</p>
-<p>
-    <label for="callsign">呼号</label>
-    <?php echo Tag::textField("callsign") ?>
-</p>
 <p>
 	<?php echo $status; ?>
 </p>
                <tr>
-                <td><label for="sex">性别</label></td>
-                <td><?php echo Phalcon\Tag::radioField(array("sex", "value" => "男", 'checked'=>''));?><label for="sex">男</label><?php echo Phalcon\Tag::radioField(array("sex", "value" => "女")) ?><label for="sex">女</label></td>
+                
               </tr>
 <p>
-    <?php // echo Tag::submitButton("注册") ?>
+    
 	<input value="注册" id="submit" type="submit" />
 </p>
 
