--- a/app/views/about/index.phtml
+++ b/app/views/about/index.phtml
@@ -1,21 +1,24 @@
-<?php use Phalcon\Tag; ?>
+	<div class="main-module">
+		<div class="head"><h2>站长简介</h2></div>
+		<div class="body"> 
+			<img src="/img/shutterbug.gif" height="75" style="float:left;" alt="shutterbug">
+			<img src="/img/neo.jpg" height="90" alt="shutterbug" style="float:right; padding-right:10px;">	
+			  <p>陈景峰 &nbsp; 昵称：netkiller &nbsp; English name: Neo chen &nbsp;<br>
+			  盲流，IT民工,UNIX like爱好者,业余无线电爱好者（呼号：BG7NYT）,摄影爱好者。<br>
+			  《PostgreSQL实用实例参考》，《Postfix 完整解决方案》，《Netkiller Security 手札》，《Netkiller Linux 手札》文档的作者 &nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="/home/about.html" class="score-700">more &gt;&gt;&gt;</a></p>
+	   	</div>
+		<div class="foot"></div>
+	</div>
 
-<h2>Sign up using this form</h2>
 
-<?php echo Tag::form("signup/register"); ?>
 
- <p>
-    <label for="name">Name</label>
-    <?php echo Tag::textField("name") ?>
- </p>
-
- <p>
-    <label for="email">E-Mail</label>
-    <?php echo Tag::textField("email") ?>
- </p>
-
- <p>
-    <?php echo Tag::submitButton("Register") ?>
- </p>
-
-</form>
+    <div class="main-module">
+	    <div class="head"><h2>Hello CQ</h2></div>
+	    <div class="body">
+<p>Hello CQ! This is BG7NYT, my name is neo chan. you also can call me 'netkiller', it's my nickname. my Amateur Radio callsign is BG7NYT, but I don't have HF radio, right now I have two radio on the VHF/UHF. one of the radio is Yaesu FT-7800R Vehicle, the other one is Yaesu FT-60R Handheld</p>
+		<p>my QTH is Longhua region, Shenzhen, China. I can QSO with Hongking, Guangdong, Zhuhai and Macao when I stand on the Wutong mountain, because I have a 8el Yagi antenna.</p>
+		<p>and I also like photography and outdoor sports. I often hike and camp in the seaside.</p>
+        </div>
+        <div class="foot"></div>
+	</div>
