--- a/app/outdoor/views/activity/detail.phtml
+++ b/app/outdoor/views/activity/detail.phtml
@@ -15,17 +15,11 @@
 </div>
 
 <div class="main-module">
-	<div class="head"><h2>活动成员</h2></div>
+	<div class="head"><h2>活动内容</h2></div>
 	<div class="body"> 
-        <table width="100%">
-            <?php if($activity) {?>
-            <tr>    <td><?php echo $activity->category ?></td></tr>
-            <tr>    <td><?php echo $activity->title ?></td></tr>
-            <tr>    <td><?php echo $activity->province ?> <?php echo $activity->city ?> <?php echo $activity->county ?></td></tr>
-            <tr>    <td><?php echo $activity->begin ?></td></tr>
-            <tr>    <td><?php echo $activity->end ?></td></tr>
-            <?php }?>
-        </table>
+
+        <?php echo $activity->content ?>
+
 	</div>
 	<div class=foot></div>
 </div>
