--- a/app/outdoor/views/layouts/profile.phtml
+++ b/app/outdoor/views/layouts/profile.phtml
@@ -11,7 +11,7 @@
             <div class="body">
 
                 <div class="divider solid"></div>
-                <div class="foot-links"></div>
+                <div class="foot-links"><a href="/outdoor/activity/create/">发起活动</a></div>
             </div>
             <div class="foot"></div>
         </div>       
