--- a/app/radio/views/layouts/net.phtml
+++ b/app/radio/views/layouts/net.phtml
@@ -8,7 +8,7 @@
             <div class="head"><h2>最活跃的主控</h2></div>
             <div class="body">
                 <ul>
-                    <li><a href="/radio/profile/callsign">呼号管理</a></li>
+                    <li><a href="/radio/profile/callsign"></a></li>
                 </ul>
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href="/radio/net">台网主页</a></div>
