--- a/app/radio/views/index/index.phtml
+++ b/app/radio/views/index/index.phtml
@@ -12,7 +12,7 @@
 	<div class="main-module">
 		<div class="head"><h2>Ham Activity</h2></div>
 		<div class="body">
-			<p><img src="/images/radio/ham.png" style="float:left;" />
+			<p><img src="/img/radio/ham.png" style="float:left;" />
 			<ul style="list-style:none;">
 				<li><a href="/archives/radio/activity/wutong.xml">QSO around Zhu Jiang delta region [ December 1, 2008]</a></li>
 				<li><a href="/archives/radio/activity/The antenna heaven.xml">The antenna heaven [December 8, 2008]</a></li>
@@ -64,19 +64,7 @@
 	<div class=foot></div>
 </div>
 
-<div class=side-module>
-	<div class=head><H2>Welcome to QSO</H2></div>
-	<div class=body>
-		<ul>
-		  <li>Personal Amateur Radiostations of P.R.China</li>
-		  <li>ZONE CQ24 ITU44 ShenZhen, China</li>
-		  <li>QTH: Longhua Shenzhen, China</li>
-		  <li>Callsign: BG7NYT No.72-50335</li>
-		  <li>Best Regards, VY 73! OP. BG7NYT</li>
-		</ul>
-   	</div>
-	<div class=foot></div>
-</div>
+
 <div class=side-module>
 	<div class=head><H2>Ham {#resource#}</H2></div>
 	<div class=body>
