--- a/app/radio/views/product/index.phtml
+++ b/app/radio/views/product/index.phtml
@@ -1,5 +1,25 @@
 <div class="wrapper">
+    
     <div class="mainWrap">
+        
+        <div class="main-module">
+            <div class="head"><h2>BALUN 1:1</h2></div>
+            <div class="body"> 
+                <img src="/img/radio/BALUN.jpg" />
+            </div>
+            <div class=foot></div>
+        </div>	
+
+        <div class="main-module">
+            <div class="head"><h2>Ham DIY</h2></div>
+            <div class="body"> 
+                <ol>
+                    <li><a href="/archives/radio/meter/index.xml"> DIY Voltmeter and Amperemeter <span>2008-1-6</span></a></li>
+                </ol>
+            </div>
+            <div class=foot></div>
+        </div>
+        
         <div class="main-module">
             <div class=head><H2>CQ Zone map</H2></div>
             <div class=body>
@@ -17,6 +37,16 @@
         <div class="side-module">
             <div class="head"><h2>Antenna</h2></div>
             <div class="body">
+
+                <ul>
+                    <li><a href="">GP Antenna</a></li>
+                    <li><a href="">J-pole Antenna</a></li>
+                    <li><a href="">Dipole Antenna</a></li>
+                    <li><a href="">Yagi Antenna</a></li>
+                    <li><a href="">Moxon Antenna</a></li>
+                    <li><a href="">Hetenna Antenna</a></li>
+                    <li><a href="">Rotatable log-periodic array</a></li>
+                </ul>                
                 
                 <div class="divider solid"></div>
                 <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
@@ -50,6 +80,7 @@
                 <div class="foot-links"><a href="/radio/">业余无线主页</a></div>
             </div>
             <div class="foot"></div>
-        </div>           
+        </div>            
+        
     </div>
 </div>
