--- a/app/outdoor/views/index/index.phtml
+++ b/app/outdoor/views/index/index.phtml
@@ -16,3 +16,123 @@
 	</div>
 	<div class=foot></div>
 </div>	
+
+<div class="main-module">
+		<div class=head><h2>背包合理使用示意图</h2></div>
+		<div class=body> 	
+			<img src="/img/outdoor/背包合理使用示意图.gif" />
+		</div>
+	</div>	
+	<div class=main-module id=tagging>
+		<div class=head><h2>{#outdoor#}</h2></div>
+		<div class=body> 	
+		
+        <p>深圳是户外的发源地,如果你不是驴子,那现在就加入我们吧。</p>
+
+        和<strong>走</strong>有关的活动:  <br />
+        walking 散步,Hiking徒步/远足,Trekking长程穿越,camping 野营,backpacking背包旅行,travel商务旅行和FB游 Active Speed 快走,暴走,健身走,Trail running 越野跑 <br />
+        <br />
+        和<strong>山</strong>有关的活动  <br />
+        mountaineering低海拔登山,Alipining 中高海拔技术型登山,High altitude 高海拔登山  <br />
+        <br />
+        和<strong>岩石</strong>有关的:  <br />
+        Rock climbing 攀岩,Bouldering 抱石 <br />
+        <br />
+        和<strong>水中运动</strong>有关的:  <br />
+        rafting集体漂流,Canoeing独木舟,kayaking 皮划艇,Boating 自驾船,snorkeling 浮潜,scuba diving重裝潜水,surfing 冲浪,wind surfing 帆板sailing 帆船  <br />
+        <br />
+        和<strong>自行车</strong>有关的活动 <br />
+        mountain bike山地车, bike racing 公路赛车, bike touring 自行车旅行 <br />
+        <br />
+        和<strong>滑雪</strong>有关的活动 <br />
+        skiing滑雪, snowboarding单板滑雪
+
+		</div>
+	</div>		
+
+
+<center>
+<h1>深圳周边户外活动经典线路之详细说明版</h1> <br />
+
+<center>
+<h3>
+－－－－－海岛（准确来说基本属于惠州海域）－－－－－
+</h3>
+</center>
+<ol>
+<li>赖氏洲<br />
+说明：比较小，由于属于海产养殖，不让露营</li>
+<li>大三门岛<br />
+说明：最近环境污染比较严重，防空洞都已封锁，不过仍不失为一个不错的露营休闲好去处</li>
+<li>小三门岛<br />
+说明：缺乏淡水，地方不大，不过可以欣赏美丽珊瑚</li>
+<li>喜洲岛（当地人称南湾岛）<br />
+说明：有两户渔民，一口井水，附近有个沙滩沙质细腻，游泳也不错，背面有个渔村，环岛需要2小时</li>
+<li>大辣甲岛<br />
+说明：岛上已经开发，门票20，不过娱乐项目众多，骑马，潜水，烧烤，水上摩托</li>
+<li>小辣甲岛<br /></li>
+<li>青州岛<br />
+说明：淡水极少，条件艰苦</li>
+</ol>
+<center>
+<h3>
+－－－－－海滩休闲露营－－－－－
+</h3>
+</center>
+<pre>
+1、大鹿港
+说明：沙质粗，沙滩萎缩了不少，旁边有一淡水溪谷，适合露营，不过地点不大
+2、金沙湾
+说明：现在也圈地商业化，不过设施齐全，露营和游泳也不错
+3、鹅公湾
+说明：地方下，有养殖场修建筑于此，已经不适合露营
+4、西冲
+说明：5里沙滩，现在设施齐全，不过缺乏树阴
+5、东冲
+说明：比过去条件好多了，冲凉，海鲜，设施齐全
+6、过店
+说明：地点不大，沙滩萎缩，现在已经很少有人去露营了
+7、桔钓沙
+说明：一片松树林，设施齐全，露营收费贵了些，不过是极其适合露营的地方
+8、溪涌
+说明：适合公司，团体休闲度假
+9、 大梅沙
+说明：不用多少了，人多如蚁，不过也是可露营的
+10、小梅沙
+说明：同上
+11、杨梅坑
+说明：号称几百米沙滩，实际不大，且为游艇协会所用，不适合露营
+12、大水坑湾
+说明：乱石堆，不适合露营
+13、大深湾
+说明：同上
+</pre>
+<center>
+<h3>
+－－－－－－室外攀岩、速降－－－－－－
+</h3>
+</center>
+<pre>
+1、马峦山（已开发）
+2、东冲（已开发）
+3、过店高山角（开发中）
+4、黑岩角（未开发）
+5、七娘山（已开发）
+6、石岩攀岩场（人工修建，举办过国际比赛）
+</pre>
+<center>
+<h3>
+－－－－－室内攀岩、抱石－－－－－
+</h3>
+</center>
+<pre>
+1、高科利优胜美地攀岩馆
+地址：福田岗厦福华路高科利大厦后楼二楼
+电话：83396051(晚6点以后)　　26306655
+2、铜锣湾5楼火狐狸攀岩场
+地点好，常有人去。
+3、南山雪线抱石馆
+人不多。
+</pre>
+注：东冲，西冲，葵冲实际为东涌，西涌，葵涌，不过因大家通常写为”冲“，遂按照约定俗成更改过来。 还有更多扩展线路稍后列出！ 
+</pre>
