--- a/app/views/layouts/about.phtml
+++ b/app/views/layouts/about.phtml
@@ -1,70 +1,112 @@
-<div class="wrapper">
-    <div class="mainWrap">
-         <?php echo $this->getContent() ?>      
+<div id="bigContainer">
+     <?php echo $this->getContent() ?>      
+</div>
+<div id="smallContainer">
+    <div class="side-module">
+      <div class="head">
+        <h2>My Photography Equipment</h2>
+      </div>
+      <div class="body">
+
+        <ul> 
+          <li>Canon EOS 350D</li> 
+          <li>Canon EF 16-35MM F2.8L II USM</li>				
+          <li>Canon EF 24-105MM F4L IS USM</li>			
+          <li>Canon EF 85MM F1.8 USM</li>			
+          <li>Canon EF-s 18-55MM F3.5/5.6</li>	
+          <li>Canon Speedlite 430EX + OC-E3a</li> 
+          <li>BENRO MP-68 n6</li> 
+          <li>Nokia N73 Carl Zeiss Tessar 2.8/5.6 AF 3.2 megapixel</li> 
+        </ul> 
+
+        <div class="divider solid"></div>
+        <div class="foot-links"><a href="">Canon EF 70-200MM F2.8L II USM</a> </div>
+      </div>
+      <div class="foot"></div>
     </div>
-    <div class="sideWrap">
 
-        
-        <div class="side-module">
-          <div class="head">
-            <h2>My Photography Equipment</h2>
-          </div>
-          <div class="body">
+    <div class="side-module">
+      <div class="head">
+        <h2>Filter</h2>
+      </div>
+      <div class="body">
 
-            <ul> 
-              <li>Canon EOS 350D</li> 
-              <li>Canon EF 16-35MM F2.8L II USM</li>				
-              <li>Canon EF 24-105MM F4L IS USM</li>			
-              <li>Canon EF 85MM F1.8 USM</li>			
-              <li>Canon EF-s 18-55MM F3.5/5.6</li>	
-              <li>Canon Speedlite 430EX + OC-E3a</li> 
-              <li>BENRO MP-68 n6</li> 
-              <li>Nokia N73 Carl Zeiss Tessar 2.8/5.6 AF 3.2 megapixel</li> 
-            </ul> 
+        <ul> 
+          <li>Kenko PRO 1Digital Protector(W) 77MM</li> 
+          <li>Kenko PRO 1Digital Protector(W) 82MM</li>				
+          <li>Kenko PRO 1Digital CPL 77MM</li>
+          <li>Kenko SKYLIGHT 1A 58MM</li>			
+          <li>Kenko UV(O) 58MM</li>			
+          <li>Kenko ND-4 58MM</li>
+          <li>Hoya CPL 58MM</li> 
+        </ul> 
 
-            <div class="divider solid"></div>
-            <div class="foot-links"><a href="">Canon EF 70-200MM F2.8L II USM</a> </div>
-          </div>
-          <div class="foot"></div>
+        <div class="divider solid"></div>
+        <div class="foot-links">  </div>
+      </div>
+      <div class="foot"></div>
+    </div>	        
+
+    <div class=side-module>
+        <div class=head><H2>My Radio Equipment - 144/430Mhz</H2></div>
+        <div class=body>
+            <ul>
+              <li>Yaesu FT-7800R Vehicle</li>
+              <li>Yaesu FT-60R Handheld</li>		
+              <li>Yaesu FT-50R Handheld</li>		
+              <li>Nagoya MAG-79EL-3W Vehicle Antenna</li>
+              <li>Nagoya NA-770R Vehicle Antenna</li>
+              <li>Nagoya NA-771 Handheld Antenna</li>	
+              <li>Nagoya NA-773 Handheld Antenna</li>
+              <li>DIY 8EL Yagi</li>
+            </ul>
         </div>
-
-        <div class="side-module">
-          <div class="head">
-            <h2>Filter</h2>
-          </div>
-          <div class="body">
-
-            <ul> 
-              <li>Kenko PRO 1Digital Protector(W) 77MM</li> 
-              <li>Kenko PRO 1Digital Protector(W) 82MM</li>				
-              <li>Kenko PRO 1Digital CPL 77MM</li>
-              <li>Kenko SKYLIGHT 1A 58MM</li>			
-              <li>Kenko UV(O) 58MM</li>			
-              <li>Kenko ND-4 58MM</li>
-              <li>Hoya CPL 58MM</li> 
-            </ul> 
-
-            <div class="divider solid"></div>
-            <div class="foot-links">  </div>
-          </div>
-          <div class="foot"></div>
-        </div>	        
-
-        <div class=side-module>
-            <div class=head><H2>Welcome to QSO</H2></div>
-            <div class=body>
-                <ul>
-                  <li>Personal Amateur Radiostations of P.R.China</li>
-                  <li>ZONE CQ24 ITU44 ShenZhen, China</li>
-                  <li>QTH: Longhua Shenzhen, China</li>
-                  <li>Callsign: BG7NYT No.72-50335</li>
-                  <li>Best Regards, VY 73! OP. BG7NYT</li>
-                </ul>
-            </div>
-            <div class=foot></div>
-        </div>        
-        
+        <div class=foot></div>
     </div>
+
+    <div class=side-module>
+        <div class=head><H2>Welcome to QSO</H2></div>
+        <div class=body>
+            <ul>
+              <li>Personal Amateur Radiostations of P.R.China</li>
+              <li>ZONE CQ24 ITU44 ShenZhen, China</li>
+              <li>QTH: Longhua Shenzhen, China</li>
+              <li>Callsign: BG7NYT No.72-50335</li>
+              <li>Best Regards, VY 73! OP. BG7NYT</li>
+            </ul>
+        </div>
+        <div class=foot></div>
+    </div>        
+
+    <div class=side-module>
+        <div class=head><H2>My Outdoor Equipment</H2></div>
+        <div class=body>
+            <ul>
+              <li>帐篷 × 2 、睡袋、防潮垫 </li>
+              <li>背囊 60L 、防水袋 </li>
+              <li>水袋、炉头、炊具</li>
+              <li>UltraFire C1st + 18650 手电筒，头灯</li>
+              <li>速干衣、裤、头巾</li>
+            </ul>
+        </div>
+        <div class=foot></div>
+    </div>        
+
+    <div class=side-module>
+        <div class=head><H2>Navigation</H2></div>
+        <div class=body>
+            <ul>
+                <li>GPS (Global Positioning System)</li>
+                <li>Nokia N73, Nokia N76</li>
+                <li>HOLUX M-241 Wireless GPS Logger </li>
+                <li>Route66.Mobile7.3.545.s60v3</li>
+                <li>Smart2go v1.0</li>
+                <li>SmartComGPS v1.53</li>
+            </ul>		 
+        </div>
+        <div class=foot></div>
+    </div>
+
 </div>
 
 
